test/corpus/comments_and_notes.txt
================================================================================
with ; comment
================================================================================
; hello

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (comment)))

================================================================================
with * comment
================================================================================
* hello

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (comment)))

================================================================================
notes
================================================================================
2020-12-01 Something
    ; some note
    Expenses:Food:Groceries                21.36 EUR ; asdfsadf
    ; another note
    Assets:Bank:Checking

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (payee)
        (note)
        (posting
          (account)
          (amount
            (quantity)
            (commodity))
          (note))
        (note)
        (posting
          (account))))))

================================================================================
multiple comments
================================================================================
; something
* something

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (comment))
  (journal_item
    (comment)))

================================================================================
blank lines
================================================================================

; comment

* comment

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (comment))
  (journal_item
    (comment)))

================================================================================
single metadata tag
================================================================================

2021-07-08 Something
    ; :TAG:

--------------------------------------------------------------------------------

(source_file
  (journal_item
    (xact
      (plain_xact
        (date)
        (payee)
        (note
          (tag_name))))))
